chore: topics/k1ch/admin-put-personas-permissions/post -> put
