# server/src/api_endpoints/personas/permissions.js
@@ -16,7 +16,7 @@ const getPersonaPermissions = async (req, res, next) => {
 const createPersonaPermissions = async (req, res, next) => {
   try {
     const { persona_key: personaKey } = req.params
-    const permissionKeys = req.body
+    const permissionKeys = Array.from((new Set(req.body)))
     await Promise.all([
       checkPersonaExists(personaKey),
       checkPersonaPermissionsValidity(personaKey, permissionKeys),
@@ -24,7 +24,7 @@ const createPersonaPermissions = async (req, res, next) => {
     await dbAdminPersonaPermissions.insertPersonaPermissions(personaKey, permissionKeys)
     const locationUrl = `${req.protocol}://${req.get('host')}${req.originalUrl}`
     res.set('Location', locationUrl)
-    res.status(201).send()
+    res.status(204).send()
   } catch ({ httpStatusCode = 500, message }) {
     return next(createError(httpStatusCode, { message }))
   }
