# server/the-usher-openapi-spec.yaml
@@ -495,7 +495,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/InternalError'
-    post:
+    put:
       'x-swagger-router-controller': 'personas/permissions'
       operationId: createPersonaPermissions
       summary: Assigns permissions to the subject persona
@@ -515,9 +515,8 @@ paths:
               items:
                 type: integer
                 minimum: 1
-              uniqueItems: true
       responses:
-        201:
+        204:
           description: Successfully created permissions for the subject persona
           headers:
             Location:
@@ -530,8 +529,6 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         404:
           $ref: '#/components/responses/NotFound'
-        409:
-          $ref: '#/components/responses/Conflict'
         500:
           $ref: '#/components/responses/InternalError'
 
